@@ -1,6 +1,9 @@
 # vim: set noexpandtab:
 
 2013-01-17 Steve
+	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15
+
+2013-01-17 Steve
 	* Tagging SusyNtuple-00-00-41
 
 2013-01-16 Matt
